@@ -9,7 +9,6 @@ Features
 * Scale the SVG properly according to window size
 * Option to rotate the bead, or to flip horizontally or vertically
 * Some visual way of indicating what parts of the bead can be clicked
-* Highlight on hover
 * Up/Down key press:  Increment/Decrement barcodes?
 
 
